tests/Casm/negative/test003.casm
-- Non-continuous memory use

start:
  [ap] = 7; ap++
  ap += 3
  [ap] = 2; ap++
  [ap - 2] = 4
